--- a/hr_project_vite/package.json
+++ b/hr_project_vite/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/x-charts": "^7.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-editable-label": "^0.2.1",
+    "react-inline-editing": "^1.0.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
